--- a/style.css
+++ b/style.css
@@ -58,3 +58,10 @@ h2  {
   font-family: didot;
   text-align: right;
 }
+.article_four_dim {
+  background-color: grey;
+  margin: 100px;
+  padding: 20px;
+  font-family: didot;
+  text-align: right;
+}
